# backend/src/controllers/todoController.ts
@@ -1,6 +1,6 @@
 import { Todo } from '@prisma/client';
-import { Body, Controller, Get, Post, Route, Tags } from 'tsoa';
-import { TodoPostParams } from '../@types/Todo';
+import { Body, Controller, Get, Path, Post, Put, Route, Tags } from 'tsoa';
+import { TodoPostParams, TodoPutParams } from '../@types/Todo';
 import TodoService from '../services/todo';
 @Route('todo')
 @Tags('Todo')
@@ -26,5 +26,22 @@ export class TodoController extends Controller {
   @Post('')
   public createTodo(@Body() params: TodoPostParams): Promise<Todo> {
     return this.todoService.createTodo(params);
+  }
+
+  /**
+   * ToDo更新
+   * @summary ToDo更新
+   * @param TodoPostParams
+   * @returns 登録したToDo
+   */
+  @Put('{todoId}')
+  public updateTodo(
+    @Path() todoId: string,
+    @Body() params: TodoPutParams
+  ): Promise<Todo> {
+    return this.todoService.updateTodo({
+      id: todoId,
+      ...params,
+    });
   }
 }
